# kontor-cli

./: .gitignore  .pr-seed  .rules.ts  AGENTS.md  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
.agents/skills/karpathy-guidelines/: SKILL.md
.github/workflows/: ci.yml  tests.yml
docs/: folder-descriptions.yaml
docs/adr/: 0001-email-move-only.md  0002-himalaya-cli-interface.md  0003-rules-evolution-safety.md
rules/: rules.py
rules/rules.d/: 00-global.yaml  01-internal-topics.yaml  02-internal-projects.yaml  03-key-senders.yaml  99-catchall.yaml
src/kontor_cli/: classifier.py  cli.py  config.py  folders.py  himalaya.py  logging_config.py  mailbox_cleanup.py  pipeline.py  rules_engine.py  vault_integration.py
src/kontor_cli/rules/: nl_rules.py  python_rules.py  yaml_dsl.py
tests/fixtures/: sample_config.yaml  sample_email.json  sample_rules.py  sample_rules.yaml
tests/unit/: classifier_test.py  cli_test.py  config_test.py  folders_test.py  himalaya_test.py  mailbox_cleanup_test.py  pipeline_test.py  rules_engine_test.py
